added link to tumblr post

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
   <div class="container-fluid">
     <div class="col-md-6 col-md-offset-3 col-xs-12">
       <h1>Points Get</h1>
+      <p><a href="http://squidstrategy.tumblr.com/post/127120170063/splatoon-mechanics-understanding-resource-trading">See the tumblr post about this game.</a></p>
       <p>While a squid is alive, it earns points. The first team to fill their bar wins.</p>
       <p>Press combat to have one of the orange squids fight with the blue squids. There's an equal chance of the following outcomes:</p>
       <ul>
